<resources>
    <string name="app_name">Aniket Associates</string>
    <string name="ok">OK</string>
    <string name="blank" />
    <string name="no">NO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in1">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="for_any_assitance_contact_us">For any assitance, Contact us</string>
    <string name="to_increase_your_on_field_workforce_producivity_use_your_n_location_intelligence_partner_emptloc">To increase your on-field workforce productivity, use your location intelligence partner Emploc!</string>
    <string name="don_t_have_an_account_n_sign_up_here">Don\'t have an account? \n Sign Up here!</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="setup_with_emploc">Setup with Emploc</string>
    <string name="i_would_like_to_set_up_a_new_lystloc_account_for_my_organization">I would like to set up a new lystloc account for my organization</string>
    <string name="setup_a_new_company">Setup a New Company</string>
    <string name="admin_name">Admin Name</string>
    <string name="company_name">Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance">Attendance</string>
    <string name="account">Account</string>
    <string name="tasks">Tasks</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="reporting_manager">Reporting Manager</string>
    <string name="jws">JWS</string>
    <string name="monti_phogat">Monti Phogat</string>
    <string name="select_a_user_to_locate">Select a user to locate</string>
    <string name="track">Track</string>
    <string name="select_a_task">Select a task</string>
    <string name="assigned_to_me">Assigned to me</string>
    <string name="all_tasks">All tasks</string>
    <string name="no_active_task">No active task!</string>
    <string name="overdue">Overdue</string>
    <string name="disable_developer_options_fake_location_and_usb_debugging">Disable Developer Options, Fake Location and USB debugging</string>
    <string name="open_setting">Open Setting</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="opencheckin">Open check in</string>
    <string name="username">Username</string>
    <string name="designation">Designation</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="aniket_motors">Aniket Motors</string>
    <string name="pleasewait">Please wait while we are loading your data</string>
    <string name="loaderMsg">Please wait.....</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="regiration">Registration</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="register">Register</string>
    <string name="parent_id">Parent ID</string>
    <string name="state">State</string>
    <string name="city">District</string>
    <string name="logout">Are you sure want to logout</string>
    <string name="yes">yes</string>

    <style name="male">Male</style>

    <style name="female">Female</style>
</resources>