<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.signupform.SignUpActivity">

    <include
        android:id="@+id/tool"
        layout="@layout/toolbar" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/value_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/compnayNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/compnayNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticamedium"
            android:hint="@string/company_name"
            android:inputType="text"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/compnayNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adminNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticamedium"
            android:hint="@string/admin_name"
            android:inputType="text"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/adminNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:fontFamily="@font/helveticamedium"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="clear_text"

        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/phoneLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/helveticamedium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticamedium"
            android:hint="@string/password"
            android:inputType="text"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/getstarted"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dark_rectangle_corners"
        android:fontFamily="@font/helveticabold"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/sign_up1"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>