<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aniketmotor.login.AniketMotorsLoginActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/primaryDarkColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/value_20dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticamedium"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/hintTextColor"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primaryDarkColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticamedium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/black"
            android:textSize="@dimen/txt_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/value_40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/primary_dark_rectangle"
        android:fontFamily="@font/helveticabold"
        android:gravity="center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" />


    <TextView
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/value_40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/helveticabold"
        android:gravity="center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/register_a_new_account"
        android:textColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>