<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aniketmotor.register.AniketMotorsRegistrationActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_20dp"
                android:gravity="center"
                android:text="@string/regiration"
                android:textAllCaps="true"
                android:textColor="@color/primaryDarkColor"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/value_20dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordTexts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/aadharCardLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/aadharText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/aadhar_card_number"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aadharCardLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parentIdLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentIDText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/parent_id"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parentIdLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/state"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/hintTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primaryDarkColor"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stateLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticamedium"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/txt_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/textView48"
                app:layout_constraintTop_toBottomOf="@+id/textView48"
                app:srcCompat="@drawable/plus_logo" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticamedium"
                android:text="Upload Aadhar Image"
                android:textColor="@color/primaryDarkColor"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/cityLayout"
                app:layout_constraintTop_toBottomOf="@+id/cityLayout" />


            <TextView
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/value_40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="@dimen/value_20dp"
                android:background="@drawable/primary_dark_rectangle"
                android:fontFamily="@font/helveticabold"
                android:gravity="center"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView26" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>